# PolyglotLink

./: .bumpversion.toml  .env.example  .gitmodules  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVALUATION.md  LICENSE  Makefile  PLAN.md  README.md  REFOCUS-PLAN.md  SECURITY-AUDIT.md  SECURITY.md  Step-by-step.md  claude.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: development.yaml  mosquitto.conf  production.yaml  staging.yaml
deploy/kubernetes/: configmap-production.yaml  deployment.yaml  hpa.yaml  service.yaml
deploy/monitoring/: grafana-dashboard.json  prometheus-alerts.yaml
docs/: FAQ.md  INSTALLATION.md  TROUBLESHOOTING.md
docs/api/: openapi.yaml
docs/architecture/: ARCHITECTURE.md
polyglotlink/: __init__.py  requirements.txt
polyglotlink/api/routes/: v1.py
polyglotlink/app/: __init__.py  cli.py  main.py  server.py
polyglotlink/models/: schemas.py
polyglotlink/modules/: __init__.py  normalization_engine.py  output_broker.py  protocol_listener.py  schema_extractor.py  sdr_handler.py  semantic_translator_agent.py
polyglotlink/tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_fuzzing.py  test_integration.py  test_integration_live.py  test_normalization_engine.py  test_schema_extractor.py  test_security.py  test_system.py  test_validation.py
polyglotlink/tests/performance/: __init__.py  locustfile.py  test_benchmarks.py
polyglotlink/utils/: __init__.py  config.py  error_logging.py  exceptions.py  logging.py  metrics.py  middleware.py  secrets.py  validation.py
scripts/: demo.py  deploy.sh  init-timescale.sql  install.bat  install.sh
